# crypto_monitor

./: .gitignore  Cargo.toml  README.md  binance.http  docker-compose.yml
docs/: main.md
src/: binance.rs  bootstrap.rs  config.rs  lib.rs  main.rs  models.rs  schema.rs
