[package]
name = "rest_client"
version = "0.1.0"
authors = ["Nuwak <mr.igorr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.7", features = ["chrono", "serde_json", "uuid", "network-address", "numeric", "r2d2", "postgres"] }
dotenv = "0.15.0"
bigdecimal = "0.1.2"
chrono = "0.4.19"
serde_json = "1.0.64"
